syntax = "proto3";

package webarchiver;

service ArchiverService {
  rpc ListPagesRequest(ListPagesRequest) returns (ListPagesResponse) {}
  rpc GetPage(GetPageRequest) returns (Page) {}
}

message ListPagesRequest {
  // Offset of the query for pagination
  uint32 offset = 1;

  // Limit per page of the query for pagination
  uint32 limit = 2;
}

message ListPagesResponse {
  repeated Page data = 1;
}

message GetPageRequest {
  uint32 id = 1;
}

message Page {
  uint32 id = 1;
  uint32 created_at = 2;
  uint32 updated_at = 3;
  uint32 deleted_at = 4;
  uint32 pageId = 10;
  string title = 11;
  bool redirect = 12;
  uint32 priority = 13;
  uint32 scanned_at = 14;
}