syntax = "proto3";

import "google/protobuf/timestamp.proto";

package webarchiver.v1;

service PagesService {
  rpc ListPages(ListPagesRequest) returns (ListPagesResponse) {}
  rpc GetPage(GetPageRequest) returns (Page) {}
}

message ListPagesRequest {
  // Offset of the query for pagination
  uint32 offset = 1;

  // Limit per page of the query for pagination
  uint32 limit = 2;
}

message ListPagesResponse {
  repeated Page data = 1;
}

message GetPageRequest {
  uint32 id = 1;
}

message Page {
  enum Status {
    DRAFT = 0;
    PENDING = 1;
    ASSIGNED = 2;
    PROCESSING = 3;
    DONE = 10;
    FAILED = 11;
  }

  uint32 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
  string title = 11;
  bool redirect = 12;
  uint32 priority = 13;
  Status status = 15;
}

message PageHistory {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
  google.protobuf.Timestamp scanned_at = 14;
  string failure = 15;
}
